Refactor and fix tests

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
     pytest-mock
 commands =
     {envpython} --version
-    flake8 data-flows tests
+    flake8 dataflows tests
     py.test --basetemp="{envtmpdir}" tests/unit
 
 [testenv:unit]
@@ -44,7 +44,7 @@ deps =
     pytest-cov
 commands =
     {envpython} --version
-    py.test --basetemp="{envtmpdir}" --cov=data-flows tests/unit
+    py.test --basetemp="{envtmpdir}" --cov=dataflows tests/unit
 
 [testenv:cov-html]
 deps =
@@ -53,11 +53,11 @@ deps =
     pytest-cov
 commands =
     {envpython} --version
-    py.test --basetemp="{envtmpdir}" --cov=data-flows --cov-report html tests/unit
+    py.test --basetemp="{envtmpdir}" --cov=dataflows --cov-report html tests/unit
 
 [testenv:lint]
 deps =
     pylint
 commands =
     {envpython} --version
-    pylint --rcfile=.pylintrc data-flows tests
+    pylint --rcfile=.pylintrc dataflows tests
