--- a/.github/workflows/data-flows-ci.yml
+++ b/.github/workflows/data-flows-ci.yml
@@ -47,7 +47,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           sudo apt-get update
-          pip install tox pytest
+          pip install tox pytest pytest-mock
           pip install tox-gh-actions
           pip install -e .
       - name: Test with tox
