--- a/.github/actions/deploy-container/action.yml
+++ b/.github/actions/deploy-container/action.yml
@@ -105,5 +105,5 @@ runs:
       continue-on-error: false
       run: |
         gcloud compute instances add-resource-policies "${{ inputs.machine_name }}" \
-          --resouce-policies='prefect-vm-schedule' \
+          --resource-policies='prefect-vm-schedule' \
           --zone "${{ inputs.zone }}"
