Use input SA for compute instance commands

--- a/.github/actions/deploy-container/action.yml
+++ b/.github/actions/deploy-container/action.yml
@@ -82,8 +82,10 @@ runs:
       shell: bash
       continue-on-error: false
       run: |
+        export EMAIL=$(cat $GOOGLE_GHA_CREDS_PATH | jq -r '.["client_email"]')
         gcloud compute resource-policies create instance-schedule prefect-vm-schedule \
           --description='Schedule for Prefect VM start and stop times' \
+          --service-account $EMAIL \
           --region="${{ inputs.region }}" \
           --vm-start-schedule="${{ inputs.machine-start-schedule }}" \
           --vm-stop-schedule="${{ inputs.machine-stop-schedule }}" \
@@ -94,9 +96,9 @@ runs:
       run: |
         export EMAIL=$(cat $GOOGLE_GHA_CREDS_PATH | jq -r '.["client_email"]')
         gcloud compute instances create-with-container "${{ inputs.machine_name }}" \
+          --service-account $EMAIL \
           --zone "${{ inputs.zone }}" \
           --machine-type "${{ inputs.machine_type }}" \
-          --service-account $EMAIL \
           --scopes "cloud-platform" \
           --container-image "${{ env.IMAGE_URI }}"
 
@@ -104,6 +106,8 @@ runs:
       shell: bash
       continue-on-error: false
       run: |
+        export EMAIL=$(cat $GOOGLE_GHA_CREDS_PATH | jq -r '.["client_email"]')
         gcloud compute instances add-resource-policies "${{ inputs.machine_name }}" \
+          --service-account $EMAIL \
           --resource-policies='prefect-vm-schedule' \
           --zone "${{ inputs.zone }}"
