--- a/.github/workflows/deploy-flows.yml
+++ b/.github/workflows/deploy-flows.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - id: set-matrix
-        run: echo "matrix=$(ls dataflows/flows/*.py | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(ls dataflows/flows/*.py | grep -v __init__.py | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   deploy:
     needs: list-flows
