--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -81,7 +81,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: set-matrix
-        run: echo "matrix=$(ls flows/*.py | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(ls dataflows/flows/*.py | grep -v __init__.py | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   deploy:
     needs: list-flows
