--- a/.github/workflows/deploy-flows-exp.yml
+++ b/.github/workflows/deploy-flows-exp.yml
@@ -16,6 +16,9 @@ jobs:
   deploy-changed-flows:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v35
