--- a/.github/workflows/deploy-flows-exp.yml
+++ b/.github/workflows/deploy-flows-exp.yml
@@ -85,6 +85,6 @@ jobs:
 
       - run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-              python "$file"
+              python deployments.py -f "$file"
           done
         shell: bash
