--- a/.github/actions/blocks-quickstart/action.yml
+++ b/.github/actions/blocks-quickstart/action.yml
@@ -1,35 +1,35 @@
-name: 'Prefect Blocks Quickstart'
-description: 'Deploy CloudRunJob and GitHub blocks for serverless containerized execution'
+name: "Prefect Blocks Quickstart"
+description: "Deploy CloudRunJob and GitHub blocks for serverless containerized execution"
 branding:
   icon: cloud
   color: blue
 inputs:
   prefect_api_key:
-    description: 'Prefect Cloud API key'
+    description: "Prefect Cloud API key"
     required: true
   prefect_api_url:
-    description: 'Prefect Cloud API URL'
+    description: "Prefect Cloud API URL"
     required: true
   block_name:
-    description: 'Name of the GitHub, CloudRunJob and GcpCredentials blocks'
+    description: "Name of the GitHub, CloudRunJob and GcpCredentials blocks"
     required: false
     default: "default"
   image_uri:
-    description: 'Name of the AR image URI'
+    description: "Name of the AR image URI"
     required: true
     default: "us-east1-docker.pkg.dev/prefect-community/prefect/deployments:latest"
   region:
     description: GCP region
     required: true
-    default: 'us-east1'
+    default: "us-east1"
   python_version:
-    description: 'Python version'
+    description: "Python version"
     required: false
-    default: "3.10"  # the latest Prefect 2 version is used by default
+    default: "3.10" # the latest Prefect 2 version is used by default
   install_command:
-    description: 'Can be set to e.g. pip install -r requirements.txt'
+    description: "Can be set to e.g. pip install -r requirements.txt"
     required: false
-    default: "pip install ."  # install via setup.py by default
+    default: "pip install ." # install via setup.py by default
 runs:
   using: "composite"
   steps:
@@ -37,7 +37,7 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: "${{ inputs.python_version }}"
-        cache: 'pip'
+        cache: "pip"
 
     - id: install-prefect
       run: |
