--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -5,17 +5,17 @@ on:
       artifact_repository:
         description: Artifact Registry Repository
         required: true
-        default: 'prefect'
+        default: "prefect"
         type: string
       image_name:
         description: Artifact Container Name
         required: true
-        default: 'deployments'
+        default: "deployments"
         type: string
       region:
         description: GCP region
         required: true
-        default: 'us-east1'
+        default: "us-east1"
         type: string
 jobs:
   container-image:
@@ -27,7 +27,7 @@ jobs:
         with:
           prefect_api_key: ${{ secrets.PREFECT_API_KEY }}
           prefect_api_url: ${{ secrets.PREFECT_API_URL }}
-          artifact_repository: ${{ github.event.inputs.artifact_repository }}  # optional
-          image_name: ${{ github.event.inputs.image_name }}  # optional
-          region: ${{ github.event.inputs.region }}  # optional
+          artifact_repository: ${{ github.event.inputs.artifact_repository }} # optional
+          image_name: ${{ github.event.inputs.image_name }} # optional
+          region: ${{ github.event.inputs.region }} # optional
           gcp_credentials_json: ${{ secrets.GCP_CREDENTIALS }}
