--- a/.github/workflows/deploy-flows.yml
+++ b/.github/workflows/deploy-flows.yml
@@ -1,45 +1,90 @@
-name: Prefect Deployments CI/CD
+name: Deploy flows
+
 on:
   workflow_dispatch:
   push:
+  pull_request:
     branches:
       - main
+      - development
     paths:
-      - 'dataflows/flows/**'
+      - "dataflows/flows/**.py"
+      - "dataflows/deployments/**.py"
+
 
 jobs:
-  list-flows:
+  deploy-changed-flows:
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - id: set-matrix
-        run: echo "matrix=$(ls dataflows/flows/*.py | grep -v __init__.py | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
-
-  deploy:
-    needs: list-flows
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        flows: ${{ fromJson(needs.list-flows.outputs.matrix) }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - id: flow  # example output: "flows/hello.py:hello"
-        run: |
-          export FLOW_NAME=$(basename ${{ matrix.flows }} .py)
-          echo "entrypoint=${{ matrix.flows }}:$FLOW_NAME" >> $GITHUB_OUTPUT
-      - id: deploy
-        uses: ./.github/actions/deploy-flows
+      - uses: actions/checkout@v3
         with:
-          prefect_api_key: ${{ secrets.PREFECT_API_KEY }}
-          prefect_api_url: ${{ secrets.PREFECT_API_URL }}
-          flow_entrypoint: ${{ steps.flow.outputs.entrypoint }}
-          deployment: "default" # optional
-          queue: "default" # optional
-          storage_block: "github/default" # optional
-          infrastructure_block: "cloud-run-job/default" # optional
-          python_version: "3.10" # optional
-          install_command: "pip install ." # optional
+          fetch-depth: 0
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+        with:
+          files: |
+            dataflows/flows/**.py
+
+      - name: Set up Python
+        if: steps.changed-files.outputs.any_changed == 'true'
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: 'pip'
+
+      - id: install-prefect
+        run: |
+          pip install prefect
+          pip install .
+        shell: bash
+
+      - id: login-prefect
+        run: |
+          prefect config set PREFECT_API_KEY=${{ secrets.PREFECT_API_KEY }}
+          prefect config set PREFECT_API_URL=${{ secrets.PREFECT_API_URL }}
+        shell: bash
+
+      - run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+              python deployments.py -f "$file"
+          done
+        shell: bash
+
+  deploy-changed-deployments:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+        with:
+          files: |
+            dataflows/deployments/[!_]*.py
+
+      - name: Set up Python
+        if: steps.changed-files.outputs.any_changed == 'true'
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: 'pip'
+
+      - id: install-prefect
+        run: |
+          pip install prefect
+          pip install .
+        shell: bash
+
+      - id: login-prefect
+        run: |
+          prefect config set PREFECT_API_KEY=${{ secrets.PREFECT_API_KEY }}
+          prefect config set PREFECT_API_URL=${{ secrets.PREFECT_API_URL }}
+        shell: bash
+
+      - run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+              python deployments.py -f "$file"
+          done
+        shell: bash
