--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,18 @@ coverage.xml
 .pytest_cache/
 
 # VS code
-*./vs_code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 # Translations
 *.mo
