--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ coverage.xml
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+.vscode/
+*.vscode
 
 # Local History for Visual Studio Code
 .history/
